k8s/lits-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: lits
  name: lits
spec:
  type: ClusterIP
  ports:
    - name: "lits-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: lits
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lits
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment.name: lits
  template:
    metadata:
      labels:
        deployment.name: lits
    spec:
      containers:
      - name: lits
        image: gitlab.lnu.se:5050/2dv013/student/team-2-bengal/litter/lits-service
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred
