k8s/litter-client-staging.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: client
  name: client
spec:
  type: NodePort
  ports:
    - name: "client-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: client
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment.name: client
  template:
    metadata:
      labels:
        deployment.name: client
    spec:
      containers:
      - name: client
        # image: client-staging # Dev
        image: gitlab.lnu.se:5050/2dv013/student/team-2-bengal/litter/litter-client-staging:latest # Prod
        imagePullPolicy: Always # Prod
        ports:
          - containerPort: 8080     
      imagePullSecrets:
      - name: regcred
---
