k8s/litter-client.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: client
  name: client
spec:
  type: NodePort
  ports:
    - name: "client-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: client
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      deployment.name: client
  template:
    metadata:
      labels:
        deployment.name: client
    spec:
      containers:
      - name: client
        image: client
        imagePullPolicy: Never
        ports:
          - containerPort: 8080
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config      
      imagePullSecrets:
      - name: regcred
