k8s/litter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service.name: litter
  name: litter
spec:
  type: NodePort
  ports:
    - name: "litter-port"
      port: 8888
      targetPort: 8080
  selector:
    deployment.name: litter
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litter
  namespace: default
spec:
  replicas: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      deployment.name: litter
  template:
    metadata:
      labels:
        deployment.name: litter
    spec:
      containers:
      - name: litter
        image: gitlab.lnu.se:5050/2dv013/student/team-2-bengal/litter/litter
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred
